fix: rmeove extra margin from notice

--- a/assets/src/css/admin/settings.scss
+++ b/assets/src/css/admin/settings.scss
@@ -674,4 +674,8 @@ a.give-delete {
 			}
 		}
 	}
+
+	.give-upsell-notice {
+		margin: 0;
+	}
 }
